<resources>
    <string name="app_name">Soccer Analyst</string>
    <string name="events">Events</string>
    <string name="settings">Settings</string>
    <string name="game">Game</string>
    <string name="addGameInTheSettings">add game in the settings</string>
    <string name="addEventsInTheSettings">add events in the settings</string>
    <string name="theEventWasRecorded">the event was recorded</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="theEventIsDeleted">the event is deleted</string>
    <string name="theGamesListIsEmptyAddGameInTheSettings">the games list is empty\nadd game in the settings</string>
    <string name="noEventsHaveBeenRecordedYet">no events have been recorded yet</string>
    <string name="swipeTDelete">swipe to delete</string>
    <string name="failedToSaveTheFile">failed to save the file</string>
    <string name="theFileIsSavedInTheDownloadsFolder">the file is saved in the downloads folder</string>
    <string name="saveAsAFile">Save as a file 📁</string>
    <string name="homeTeam">home team</string>
    <string name="awayTeam">away team</string>
    <string name="half1">half 1</string>
    <string name="half2">half 2</string>
    <string name="extraTime1">ET 1</string>
    <string name="extraTime2">ET 2</string>
    <string name="playerNumber">player number</string>
    <string name="saveTheTimeOrCustomizedEvent">save the time / customized event</string>
    <string name="eventName">event name</string>
    <string name="writeEvent">write event</string>
    <string name="gamesList">games list</string>
    <string name="eventsList">events list</string>
    <string name="editGames">Edit games</string>
    <string name="editEvents">Edit events</string>
    <string name="writeEventName">Write event name</string>
    <string name="writeGameName">Write game name</string>
    <string name="toTopOfTheList">to top</string>
    <string name="toBottomOfTheList">to bottom</string>
    <string name="addEvent">Add event</string>
    <string name="deleteEvent">Delete event</string>
    <string name="renameEvent">Rename event</string>
    <string name="addGame">Add game</string>
    <string name="deleteGame">Delete game</string>
    <string name="renameGame">Rename game</string>
</resources>
