<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="ran.tmpTest.GameFragment">

    <TextView
        android:id="@+id/playerNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerNumber"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/gamePart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/divider2"
         />


    <Button
        android:id="@+id/specialEvent"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveTheTimeOrCustomizedEvent"
        app:layout_constraintBottom_toTopOf="@id/space3" />

    <NumberPicker
        android:id="@+id/playerDigit1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/selectTeam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerNumTextView" />

    <NumberPicker
        android:id="@+id/playerDigit2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/selectTeam"
        app:layout_constraintStart_toEndOf="@id/playerDigit1"
        app:layout_constraintTop_toBottomOf="@id/playerNumTextView" />


    <TextView
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        android:textSize="50dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/divider2"
        app:layout_constraintTop_toBottomOf="@id/gamePart" />


    <ImageButton

        android:id="@+id/stopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:src="@android:drawable/ic_media_previous"
        app:layout_constraintBottom_toTopOf="@id/selectTeam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/divider2" />

    <ImageButton
        android:id="@+id/playBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintBottom_toTopOf="@id/selectTeam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/divider2" />

    <RadioGroup
        android:id="@+id/selectTeam"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/radio_group_outline"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:id="@+id/away_team"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/no_chosen_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/awayTeam"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/noTeam"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/chosen_radio_button"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text=" "
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/home_team"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/no_chosen_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/homeTeam"
            android:textSize="24sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/gamePart"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/radio_group_outline"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choseGameDropDownList">

        <RadioButton
            android:id="@+id/et2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/no_chosen_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/extraTime2"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/no_chosen_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/extraTime1"
            android:textSize="20dp" />


        <RadioButton
            android:id="@+id/half2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/no_chosen_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/half2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/half1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/no_chosen_radio_button"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/half1"
            android:textSize="20dp" />
    </RadioGroup>

    <Spinner
        android:id="@+id/choseGameDropDownList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toTopOf="parent"/>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/space1" />

    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintBottom_toTopOf="@+id/specialEvent" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/space2" />

    <Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollViewLayout" />


    <Space
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintBottom_toTopOf="@+id/divider4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:id="@+id/msgToUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1">

            <LinearLayout
                android:id="@+id/buttonList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>


        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/divider2"
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:layout_marginLeft="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/selectTeam"
        app:layout_constraintLeft_toRightOf="@id/playerDigit2"
        app:layout_constraintTop_toTopOf="@id/playerNumTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>