<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/playerNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerNumber"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/divider2"

        />


    <NumberPicker
        android:id="@+id/playerDigit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/selectTeam"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerNumTextView" />

    <NumberPicker
        android:id="@+id/playerDigit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/selectTeam"
        app:layout_constraintLeft_toRightOf="@id/playerDigit1"
        app:layout_constraintTop_toBottomOf="@id/playerNumTextView" />


    <TextView
        android:id="@+id/clockText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="00:00"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@id/selectTeam"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/divider2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gamePartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/half1"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/divider2"
        app:layout_constraintBottom_toTopOf="@id/clockText" />




    <RadioGroup
        android:id="@+id/selectTeam"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/radio_group_outline"
        android:layoutDirection="ltr"
        >

        <RadioButton
            android:id="@+id/away_team"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/awayTeam"
            android:textSize="24sp"
            android:background="@drawable/no_chosen_radio_button"/>

        <RadioButton
            android:id="@+id/noTeam"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center"
            android:button="@null"
            android:text=" "
            android:textSize="24sp"
            android:background="@drawable/chosen_radio_button"/>

        <RadioButton
            android:id="@+id/home_team"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/homeTeam"
            android:textSize="24sp"
            android:background="@drawable/no_chosen_radio_button"/>

    </RadioGroup>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/space1" />

    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollViewLayout" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        >


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1">


            <RadioGroup
                android:id="@+id/eventsRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                    <RadioButton
                        android:id="@+id/specialEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                         />

                <EditText
                    android:id="@+id/specialEventText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:hint="@string/enterEventName"
                    android:textAlignment="textStart">

                </EditText>


            </RadioGroup>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/cancelButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/selectTeam"
        app:layout_constraintLeft_toRightOf="@id/playerDigit2"
        app:layout_constraintTop_toTopOf ="@id/playerNumTextView" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/cancelButton"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>